--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -12,95 +12,82 @@
 
 /* MEYER RESET v1.0*/
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
+#docs div,#docs span, #docs applet, #docs object, #docs iframe, #docs h1, #docs h2, #docs h3, #docs h4, #docs h5, #docs h6, #docs p, #docs blockquote, #docs pre, #docs a, #docs abbr, #docs acronym, #docs address, #docs big, #docs cite, #docs code, #docs del, #docs dfn, #docs em, #docs font, #docs img, #docs ins, #docs kbd, #docs q, #docs s, #docs samp, #docs small, #docs strike, #docs strong, #docs sub, #docs sup, #docs tt, #docs var, #docs b, #docs u, #docs i, #docs center, #docs dl, #docs dt, #docs dd, #docs ol, #docs ul, #docs li, #docs fieldset, #docs form, #docs label, #docs legend, #docs table, #docs caption, #docs tbody, #docs tfoot, #docs thead, #docs tr, #docs th, #docs td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}#docs {line-height:1}#docs blockquote, #docs q{quotes:none} #docs blockquote:before,#docs blockquote:after,#docs q:before,#docs q:after{content:'';content:none} #docs :focus{outline:0} #docs ins{text-decoration:none} #docs del{text-decoration:line-through} #docs table{border-collapse:collapse;border-spacing:0}
 
 /* BASIC TYPOGRAPHY */
 
-html { font-size: 62.5%; font-family: "Liberation Sans", Helvetica, Arial, sans-serif; }
-strong, th, thead td, h1, h2, h3, h4, h5, h6 { font-weight: bold; }
-cite, em, dfn { font-style: italic; }
-code, kbd, samp, pre, tt, var, input[type='text'], input[type='password'], textarea { font-size: 92%; font-family: monaco, "Lucida Console", courier, monospace; }
-del { text-decoration: line-through; color: #666; }
-ins, dfn { border-bottom: 1px solid #ccc; }
-small, sup, sub { font-size: 85%; }
-abbr, acronym { text-transform: uppercase; font-size: 85%; letter-spacing: .1em; }
-a abbr, a acronym { border: none; }
-abbr[title], acronym[title], dfn[title] { cursor: help; border-bottom: 1px solid #ccc; }
-sup { vertical-align: super; }
-sub { vertical-align: sub; }
+#docs { font-size: 62.5%; font-family: "Liberation Sans", Helvetica, Arial, sans-serif; }
+#docs strong, #docs th, #docs thead td, #docs h1, #docs h2, #docs h3, #docs h4, #docs h5, #docs h6 { font-weight: bold; }
+#docs cite, #docs em, #docs dfn { font-style: italic; }
+#docs code, #docs kbd, #docs samp, #docs pre, #docs tt, #docs var, i#docs nput[type='text'], #docs input[type='password'], #docs textarea { font-size: 92%; font-family: monaco, "Lucida Console", courier, monospace; }
+#docs del { text-decoration: line-through; color: #666; }
+#docs ins, #docs dfn { border-bottom: 1px solid #ccc; }
+#docs small, #docs sup, #docs sub { font-size: 85%; }
+#docs abbr, #docs acronym { text-transform: uppercase; font-size: 85%; letter-spacing: .1em; }
+#docs a abbr, #docs a acronym { border: none; }
+#docs abbr[title], #docs acronym[title], #docs dfn[title] { cursor: help; border-bottom: 1px solid #ccc; }
+#docs sup { vertical-align: super; }
+#docs sub { vertical-align: sub; }
 
 /* QUOTES */
 
-blockquote { border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; color: #666; }
-blockquote *:first-child:before { content: "\201C"; }
-blockquote *:first-child:after { content: "\201D"; }
+#docs blockquote { border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; color: #666; }
+#docs blockquote *:first-child:before { content: "\201C"; }
+#docs blockquote *:first-child:after { content: "\201D"; }
 
-/* FORMS */
-
-fieldset { padding:1.4em; margin: 0 0 1.5em 0; border: 1px solid #ccc; }
-legend { font-weight: bold; font-size:1.2em; }
-label { font-weight: bold; }
-textarea, input[type='text'], input[type='password'], select { border: 1px solid #ccc; background: #fff; }
-textarea:hover, input[type='text']:hover, input[type='password']:hover, select:hover { border-color: #aaa; }
-textarea:focus, input[type='text']:focus, input[type='password']:focus, select:focus { border-color: #888; outline: 2px solid #ffffaa; }
-input, select { cursor: pointer; }
-input[type='text'],input[type='password'] { cursor: text; }
 
 /* BASE SIZES */
 
-.container { font-size: .9em; line-height: 1.6em; }
-h1 { font-size: 1.9em; }
-h2 { font-size: 1.7em; }
-h3 { font-size: 1.5em; }
-h4 { font-size: 1.3em; }
-h5 { font-size: 1.2em; }
-h6 { font-size: 1em; }
+#docs { font-size: .9em; line-height: 1.4em; padding-left:10px;}
+#docs h1 { font-size: 1.8em; }
+#docs h2 { font-size: 1.35em; }
+#docs h3 { font-size: 1.1em; }
 
 /* LISTS */
 
-ul li { margin-left: .85em; }
-ul { list-style-type: disc; }
-ul ul { list-style-type: square; }
-ul ul ul { list-style-type: circle; }
-ol { list-style-position: outside; list-style-type: decimal; }
-dt { font-weight: bold; }
+#docs ul li { margin-left: .85em; }
+#docs ul { list-style-type: disc; }
+#docs ul ul { list-style-type: square; }
+#docs ul ul ul { list-style-type: circle; }
+#docs ol { list-style-position: outside; list-style-type: decimal; }
+#docs dt { font-weight: bold; }
 
 /* TABLES */
 
-table { border-top: 1px solid #ccc;  border-left: 1px solid #ccc; }
-th, td { border-bottom: 1px solid #ddd; border-right: 1px solid #ccc; }
+#docs table { border-top: 1px solid #ccc;  border-left: 1px solid #ccc; }
+#docs th, #docs td { border-bottom: 1px solid #ddd; border-right: 1px solid #ccc; }
 
 /* MARGINS & PADDINGS */
 
-blockquote *:first-child { margin: .8em 0; }
-hr, p, ul, ol, dl, pre, blockquote, address, table, form { margin-bottom: 1.6em; }
+#docs blockquote *:first-child { margin: .8em 0; }
+#docs hr, #docs p, #docs ul, #docs ol, #docs dl, #docs pre, #docs blockquote, #docs address, #docs table, #docs form { margin-bottom: 1.4em; }
 /* NOTE: Calulate header margins: TOP: 1.6em/size, BOTTOM: 1.6em/size/2 */
-h1 { margin: 1em 0 .5em;  }
-h2 { margin: 1.07em 0 .535em; }
-h3 { margin: 1.14em 0 .57em; }
-h4 { margin: 1.23em 0 .615em; }
-h5 { margin: 1.33em 0 .67em; }
-h6 { margin: 1.6em 0 .8em; }
-th, td { padding: .8em; }
-caption { padding-bottom: .8em; } /* padding instead of margin for IE */
-blockquote { padding: 0 1em; margin: 1.6em 0; }
-fieldset { padding: 0 1em 1em 1em; margin: 1.6em 0; } /* padding-top is margin-top for fieldsets in Opera */
-legend { padding-left: .8em; padding-right: .8em; }
-legend+* { margin-top: 1em; } /* compensates for the opera margin bug */
-textarea, input { padding: .3em .4em .15em .4em; }
-select { padding: .1em .2em 0 .2em; }
-option { padding: 0 .4em; }
-a { position: relative; padding: 0.3em 0 .1em 0; } /* for larger click-area */
-dt { margin-top: .8em; margin-bottom: .4em; }
-ul { margin-left: 1.5em; }
-ol { margin-left: 2.35em; }
-ol ol, ul ol { margin-left: 2.5em; }
-ol ol, ol ul, ul ul, ul ol { margin-bottom: 0; }
-form div { margin-bottom: .8em; }
+#docs h1 { margin: 1em 0 .5em;  }
+#docs h2 { margin: 1.07em 0 .535em; }
+#docs h3 { margin: 1.14em 0 .57em; }
+#docs h4 { margin: 1.23em 0 .615em; }
+#docs h5 { margin: 1.33em 0 .67em; }
+#docs h6 { margin: 1.6em 0 .8em; }
+#docs th, #docs td { padding: .8em; }
+#docs caption { padding-bottom: .8em; } /* padding instead of margin for IE */
+#docs blockquote { padding: 0 1em; margin: 1.4em 0; }
+#docs fieldset { padding: 0 1em 1em 1em; margin: 1.4em 0; } /* padding-top is margin-top for fieldsets in Opera */
+#docs legend { padding-left: .8em; padding-right: .8em; }
+#docs legend+* { margin-top: 1em; } /* compensates for the opera margin bug */
+#docs textarea, #docs input { padding: .3em .4em .15em .4em; }
+#docs select { padding: .1em .2em 0 .2em; }
+#docs option { padding: 0 .4em; }
+#docs a { position: relative; padding: 0.3em 0 .1em 0; } /* for larger click-area */
+#docs dt { margin-top: .8em; margin-bottom: .4em; }
+#docs ul { margin-left: 1.5em; }
+#docs ol { margin-left: 2.35em; }
+#docs ol ol, #docs ul ol { margin-left: 2.5em; }
+#docs ol ol, #docs ol ul, #docs ul ul, #docs ul ol { margin-bottom: 0; }
+#docs form div { margin-bottom: .8em; }
 
 /* COLORS */
 
-code, pre { color: #005014; } /* very optional, but still useful. W3C uses about the same colors for codes */
+#docs code, #docs pre { color: #005014; } /* very optional, but still useful. W3C uses about the same colors for codes */
 
 /* 24 COLUMN GRID */
 
@@ -113,7 +100,7 @@ hr.space {background:#fff;color:#fff;}
 .clear {clear:both;}
 
 /* to create serif italic dramatic text, use this class */
-.fancy {
+#docs .fancy {
   color: #666;
   font-family: "Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua", Georgia, serif;
   font-style: italic;
@@ -121,7 +108,7 @@ hr.space {background:#fff;color:#fff;}
 }
 
 /* creates small caps */
-.caps {
+#docs .caps {
   font-variant: small-caps;
   letter-spacing: 1px;
   text-transform: lowercase;
@@ -132,21 +119,21 @@ hr.space {background:#fff;color:#fff;}
 
 /* TEXT CLASSES */
 
-.small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
-.large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
-.hide {display:none;}
-.quiet {color:#666;}
-.loud {color:#000;}
-.highlight {background:#ff0;}
-.top {margin-top:0;padding-top:0;}
-.bottom {margin-bottom:0;padding-bottom:0;}
-.thin {font-weight: lighter;}
-.error, .notice, .success {padding:.8em;margin-bottom:1.6em;border:2px solid #ddd;}
-.error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
-.notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
-.success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
-.error a {color:#8a1f11; background:none; padding:0; margin:0; }
-.notice a {color:#514721; background:none; padding:0; margin:0; }
-.success a {color:#264409; background:none; padding:0; margin:0; }
-.center {text-align: center;}
+#docs .small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
+#docs .large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
+#docs .hide {display:none;}
+#docs .quiet {color:#666;}
+#docs .loud {color:#000;}
+#docs .highlight {background:#ff0;}
+#docs .top {margin-top:0;padding-top:0;}
+#docs .bottom {margin-bottom:0;padding-bottom:0;}
+#docs .thin {font-weight: lighter;}
+#docs .error, #docs .notice, #docs .success {padding:.8em;margin-bottom:1.6em;border:2px solid #ddd;}
+#docs .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
+#docs .notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
+#docs .success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
+#docs .error a {color:#8a1f11; background:none; padding:0; margin:0; }
+#docs .notice a {color:#514721; background:none; padding:0; margin:0; }
+#docs .success a {color:#264409; background:none; padding:0; margin:0; }
+#docs .center {text-align: center;}
 
